--- a/color.html
+++ b/color.html
@@ -59,11 +59,11 @@
     animation:blinkingText 1.2s infinite;
 }
 @keyframes blinkingText{
-    0%{     color: #000;    }
-    49%{    color: #000; }
-    60%{    color: transparent; }
-    99%{    color:transparent;  }
-    100%{   color: #000;    }
+    0%{     color: blue;    }
+    49%{    color: yellow; }
+    60%{    color: red; }
+    99%{    color:black;  }
+    100%{   color: white;    }
 }
 </Style>
 <script>
